fix: enable vertical scroll based on mobile view and prevent touch actions on chart

--- a/packages/trader/src/AppV2/Containers/Trade/trade.scss
+++ b/packages/trader/src/AppV2/Containers/Trade/trade.scss
@@ -128,6 +128,7 @@
         &__chart {
             direction: ltr;
             overflow: hidden;
+            touch-action: none;
 
             @include mobile-screen {
                 border-top-left-radius: var(--core-borderRadius-400);
